cats and dogs : lbp + knn
lbp error persists

--- a/210524.ipynb
+++ b/210524.ipynb
@@ -598,9 +598,178 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45090b84-931f-43a7-bd4d-a32fef08d5bc",
+   "metadata": {},
+   "source": [
+    "**Making train and test splits :**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "638c15a7-8087-44c8-8779-9695a9319c73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "np.random.seed(42)\n",
+    "def splitData(data, testRatio):\n",
+    "    shuffledIndices = np.random.permutation(len(data))\n",
+    "    testSetSize = int(len(data) * testRatio)\n",
+    "    testIndices = shuffledIndices[:testSetSize]\n",
+    "    trainIndices = shuffledIndices[testSetSize:]\n",
+    "    return data.iloc[trainIndices], data.iloc[testIndices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "0a141726-659a-46b1-af6e-8b468e2ee899",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set(16512):\n",
+      "\n",
+      "       longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+      "8076     -118.19     33.83                30.0       2246.0           552.0   \n",
+      "2803     -119.03     35.42                38.0       2952.0           598.0   \n",
+      "6963     -118.06     33.99                38.0        862.0           178.0   \n",
+      "17156    -122.19     37.42                47.0        932.0           167.0   \n",
+      "7395     -118.25     33.95                41.0       1576.0           339.0   \n",
+      "\n",
+      "       population  households  median_income  median_house_value  \\\n",
+      "8076       1032.0       548.0         3.5871            347100.0   \n",
+      "2803       1491.0       568.0         2.6094             67900.0   \n",
+      "6963        484.0       176.0         4.3750            186200.0   \n",
+      "17156       295.0       116.0         8.4375            500001.0   \n",
+      "7395       1252.0       302.0         1.9798             98100.0   \n",
+      "\n",
+      "      ocean_proximity  \n",
+      "8076       NEAR OCEAN  \n",
+      "2803           INLAND  \n",
+      "6963        <1H OCEAN  \n",
+      "17156      NEAR OCEAN  \n",
+      "7395        <1H OCEAN  \n",
+      "\n",
+      "Testing set (4128):\n",
+      "\n",
+      "       longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+      "13442    -117.43     34.09                18.0       3172.0           632.0   \n",
+      "13554    -117.31     34.10                52.0       1457.0           415.0   \n",
+      "12891    -121.35     38.65                20.0       2498.0           546.0   \n",
+      "19800    -123.32     40.43                15.0        661.0           146.0   \n",
+      "12022    -117.50     33.96                12.0       7923.0          1470.0   \n",
+      "\n",
+      "       population  households  median_income  median_house_value  \\\n",
+      "13442      1621.0       573.0         2.7437            120200.0   \n",
+      "13554      1238.0       341.0         2.0089             68100.0   \n",
+      "12891      1185.0       506.0         3.2243            107900.0   \n",
+      "19800       131.0        57.0         0.4999             56700.0   \n",
+      "12022      4861.0      1385.0         4.2985            139200.0   \n",
+      "\n",
+      "      ocean_proximity  \n",
+      "13442          INLAND  \n",
+      "13554          INLAND  \n",
+      "12891          INLAND  \n",
+      "19800          INLAND  \n",
+      "12022          INLAND  \n"
+     ]
+    }
+   ],
+   "source": [
+    "xTrain, xTest = splitData(dataset,0.2)\n",
+    "print(f'Training set({len(xTrain)}):\\n\\n{xTrain.head()}\\n\\nTesting set ({len(xTest)}):\\n\\n{xTest.head()}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f38d10e3-26d2-4bb1-93d4-1e75311bb2b2",
+   "metadata": {},
+   "source": [
+    "**Make train, test splits using sklearn :**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "fcb38e3e-9fb7-40ea-98fa-559abd27ebb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "0dab7186-f76e-46d9-9f23-e7a7d80d8bfe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set(16512):\n",
+      "\n",
+      "       longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+      "14196    -117.03     32.71                33.0       3126.0           627.0   \n",
+      "8267     -118.16     33.77                49.0       3382.0           787.0   \n",
+      "17445    -120.48     34.66                 4.0       1897.0           331.0   \n",
+      "14265    -117.11     32.69                36.0       1421.0           367.0   \n",
+      "2271     -119.80     36.78                43.0       2382.0           431.0   \n",
+      "\n",
+      "       population  households  median_income  median_house_value  \\\n",
+      "14196      2300.0       623.0         3.2596            103000.0   \n",
+      "8267       1314.0       756.0         3.8125            382100.0   \n",
+      "17445       915.0       336.0         4.1563            172600.0   \n",
+      "14265      1418.0       355.0         1.9425             93400.0   \n",
+      "2271        874.0       380.0         3.5542             96500.0   \n",
+      "\n",
+      "      ocean_proximity  \n",
+      "14196      NEAR OCEAN  \n",
+      "8267       NEAR OCEAN  \n",
+      "17445      NEAR OCEAN  \n",
+      "14265      NEAR OCEAN  \n",
+      "2271           INLAND  \n",
+      "\n",
+      "Testing set (4128):\n",
+      "\n",
+      "       longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+      "20046    -119.01     36.06                25.0       1505.0             NaN   \n",
+      "3024     -119.46     35.14                30.0       2943.0             NaN   \n",
+      "15663    -122.44     37.80                52.0       3830.0             NaN   \n",
+      "20484    -118.72     34.28                17.0       3051.0             NaN   \n",
+      "9814     -121.93     36.62                34.0       2351.0             NaN   \n",
+      "\n",
+      "       population  households  median_income  median_house_value  \\\n",
+      "20046      1392.0       359.0         1.6812             47700.0   \n",
+      "3024       1565.0       584.0         2.5313             45800.0   \n",
+      "15663      1310.0       963.0         3.4801            500001.0   \n",
+      "20484      1705.0       495.0         5.7376            218600.0   \n",
+      "9814       1063.0       428.0         3.7250            278000.0   \n",
+      "\n",
+      "      ocean_proximity  \n",
+      "20046          INLAND  \n",
+      "3024           INLAND  \n",
+      "15663        NEAR BAY  \n",
+      "20484       <1H OCEAN  \n",
+      "9814       NEAR OCEAN  \n"
+     ]
+    }
+   ],
+   "source": [
+    "xTrain, xTest = train_test_split(dataset,test_size=0.2,random_state=42,shuffle=True)\n",
+    "print(f'Training set({len(xTrain)}):\\n\\n{xTrain.head()}\\n\\nTesting set ({len(xTest)}):\\n\\n{xTest.head()}')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fd3a523-09de-4834-bffa-a4fac0b22ed6",
+   "id": "a5cadfa5-691a-48d9-83f6-ff3f87e32b66",
    "metadata": {},
    "outputs": [],
    "source": []
