helper method defined

--- a/mlLab/060624.ipynb
+++ b/mlLab/060624.ipynb
@@ -11,18 +11,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Dependencies :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Importing dependencies :**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as numpy\n",
+    "import numpy as np\n",
     "import math\n",
     "import csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Setting dataset paths :**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dTrainPath = \"../datasets/mlLab/290524.csv\"\n",
+    "dTestPath = \"../datasets/mlLab/060624.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train set :\n",
+      "    day weather  temp humidity    wind play_tennis\n",
+      "0     1   sunny   hot     high    weak          no\n",
+      "1     2   sunny   hot     high  strong          no\n",
+      "2     3  cloudy   hot     high    weak         yes\n",
+      "3     4    rain  mild     high    weak         yes\n",
+      "4     5    rain  cool   normal    weak         yes\n",
+      "5     6    rain  cool   normal  strong          no\n",
+      "6     7  cloudy  cool   normal  strong         yes\n",
+      "7     8   sunny  mild     high    weak          no\n",
+      "8     9   sunny  cool   normal    weak         yes\n",
+      "9    10    rain  mild   normal    weak         yes\n",
+      "10   11   sunny  mild   normal  strong         yes\n",
+      "11   12  cloudy  mild     high  strong         yes\n",
+      "12   13  cloudy   hot   normal    weak         yes\n",
+      "13   14    rain  mild     high  strong          no\n",
+      "\n",
+      "Test set :\n",
+      "  weather temp humidity    wind\n",
+      "0   sunny  hot     high    weak\n",
+      "1   sunny  hot     high  strong\n",
+      "2  cloudy  hot     high    weak\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "dTrain = pd.read_csv(dTrainPath)\n",
+    "dTest = pd.read_csv(dTestPath)\n",
+    "\n",
+    "print(f\"Train set :\\n{dTrain}\\n\\nTest set :\\n{dTest}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Definitions :"
    ]
   },
   {
@@ -34,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,12 +123,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Method definitions :**"
+    "**Data acquision method definitions :**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,6 +151,29 @@
     "        dReader = csv.reader(csvFile,delimiter=',')\n",
     "        dTest = [row for row in dReader]\n",
     "    return dTest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Helper method defintions :**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def subtables(data, col, delete):\n",
+    "    dict = {}\n",
+    "    items = np.unique(data[:,col])\n",
+    "    for item in items:\n",
+    "        dict[item] = data[data[:,col]== item]\n",
+    "        if delete:\n",
+    "            dict[item] = np.delete(dict[item],col,axis=1)\n",
+    "    return items,dict           "
    ]
   },
   {
