entropy and gain ratio hekpers added

--- a/mlLab/060624.ipynb
+++ b/mlLab/060624.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -59,21 +59,21 @@
      "output_type": "stream",
      "text": [
       "Train set :\n",
-      "    day weather  temp humidity    wind play_tennis\n",
-      "0     1   sunny   hot     high    weak          no\n",
-      "1     2   sunny   hot     high  strong          no\n",
-      "2     3  cloudy   hot     high    weak         yes\n",
-      "3     4    rain  mild     high    weak         yes\n",
-      "4     5    rain  cool   normal    weak         yes\n",
-      "5     6    rain  cool   normal  strong          no\n",
-      "6     7  cloudy  cool   normal  strong         yes\n",
-      "7     8   sunny  mild     high    weak          no\n",
-      "8     9   sunny  cool   normal    weak         yes\n",
-      "9    10    rain  mild   normal    weak         yes\n",
-      "10   11   sunny  mild   normal  strong         yes\n",
-      "11   12  cloudy  mild     high  strong         yes\n",
-      "12   13  cloudy   hot   normal    weak         yes\n",
-      "13   14    rain  mild     high  strong          no\n",
+      "   weather  temp humidity    wind play_tennis\n",
+      "0    sunny   hot     high    weak          no\n",
+      "1    sunny   hot     high  strong          no\n",
+      "2   cloudy   hot     high    weak         yes\n",
+      "3     rain  mild     high    weak         yes\n",
+      "4     rain  cool   normal    weak         yes\n",
+      "5     rain  cool   normal  strong          no\n",
+      "6   cloudy  cool   normal  strong         yes\n",
+      "7    sunny  mild     high    weak          no\n",
+      "8    sunny  cool   normal    weak         yes\n",
+      "9     rain  mild   normal    weak         yes\n",
+      "10   sunny  mild   normal  strong         yes\n",
+      "11  cloudy  mild     high  strong         yes\n",
+      "12  cloudy   hot   normal    weak         yes\n",
+      "13    rain  mild     high  strong          no\n",
       "\n",
       "Test set :\n",
       "  weather temp humidity    wind\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,6 +174,44 @@
     "        if delete:\n",
     "            dict[item] = np.delete(dict[item],col,axis=1)\n",
     "    return items,dict           "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def entropy(S):\n",
+    "    items, counts = np.unique(S, return_counts=True)\n",
+    "    ps = counts/len(S)\n",
+    "    return - np.sum(ps * np.log2(ps))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gain_ratio(data, col):\n",
+    "    eTotal = entropy(data[:,-1])\n",
+    "    items, dict = subtables(data, col, delete=False)\n",
+    "\n",
+    "    eSubset = 0\n",
+    "    intrensicVal = 0\n",
+    "    totalSize = data.shape[0]\n",
+    "\n",
+    "    for item in items:\n",
+    "        subset = dict[item]\n",
+    "        ratio = len(subset)/totalSize\n",
+    "        eSubset += ratio * entropy(subset[:,-1])\n",
+    "        intrensicVal -= ratio * math.log(ratio,2)\n",
+    "\n",
+    "    if intrensicVal == 0 : return 0\n",
+    "\n",
+    "    infoGain = eTotal - eSubset\n",
+    "    return infoGain/intrensicVal "
    ]
   },
   {
