node creater method added

--- a/mlLab/060624.ipynb
+++ b/mlLab/060624.ipynb
@@ -177,6 +177,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**entropy and gain calculator method defintions :**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -212,6 +219,37 @@
     "\n",
     "    infoGain = eTotal - eSubset\n",
     "    return infoGain/intrensicVal "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Node creator method definition :**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_node(data, metadata):\n",
+    "    if len(np.unique(data[:,-1]))==1:\n",
+    "        node = Node(None)\n",
+    "        node.answer = np.unique(data[:,-1])[0]\n",
+    "        return node\n",
+    "    \n",
+    "    gains = [gain_ratio(data,col) for col in range(data.shape[1]-1)]\n",
+    "    split = np.argmax(gains)\n",
+    "    node = Node(metadata[split])\n",
+    "    items, dict = subtables(data,split,delete=True)\n",
+    "\n",
+    "    for item in items:\n",
+    "        child = create_node(dict[item],np.delete(metadata,split))\n",
+    "        node.children.append((item,child))\n",
+    "\n",
+    "    return node"
    ]
   },
   {
