--- a/mlLab/060624.ipynb
+++ b/mlLab/060624.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,6 +250,121 @@
     "        node.children.append((item,child))\n",
     "\n",
     "    return node"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Predictor method defintion :**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict(node, instance, metadata):\n",
+    "    if node.answer is not None:\n",
+    "        return node.answer\n",
+    "    \n",
+    "    value = instance[metadata.index(node.attribute)]\n",
+    "\n",
+    "    for item, child in node.children:\n",
+    "        if item == value:\n",
+    "            return predict(child, instance, metadata)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Utility printing method definition :**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def empty(size):\n",
+    "    return \"\\t\"*size\n",
+    "\n",
+    "def print_tree(node, level):\n",
+    "    if node.answer is not None:\n",
+    "        print(empty(level),node.answer)\n",
+    "        return\n",
+    "    print(empty(level),node.attribute)\n",
+    "    for value, n in node.children:\n",
+    "        print(empty(level+1),value)\n",
+    "        print_tree(n,level+2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_predictions(node, testdata, metadata):\n",
+    "    testInstance = testdata[1:]\n",
+    "    for instance in testInstance:\n",
+    "        prediction = predict(node, instance, metadata)\n",
+    "        print(f\"Test instance : {instance}\\nPredicted label : {prediction}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree Structure : \n",
+      "\n",
+      " weather\n",
+      "\t cloudy\n",
+      "\t\t yes\n",
+      "\t rain\n",
+      "\t\t wind\n",
+      "\t\t\t strong\n",
+      "\t\t\t\t no\n",
+      "\t\t\t weak\n",
+      "\t\t\t\t yes\n",
+      "\t sunny\n",
+      "\t\t humidity\n",
+      "\t\t\t high\n",
+      "\t\t\t\t no\n",
+      "\t\t\t normal\n",
+      "\t\t\t\t yes\n",
+      "\n",
+      "Predictions for test data\n",
+      "Test instance : ['sunny', 'hot', 'high', 'weak']\n",
+      "Predicted label : no\n",
+      "Test instance : ['sunny', 'hot', 'high', 'strong']\n",
+      "Predicted label : no\n",
+      "Test instance : ['cloudy', 'hot', 'high', 'weak']\n",
+      "Predicted label : yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "metadata, dTrain = read_data(dTrainPath)\n",
+    "dTest = read_test_data(dTestPath)\n",
+    "\n",
+    "data = np.array(dTrain)\n",
+    "\n",
+    "node = create_node(data, metadata)\n",
+    "\n",
+    "print(\"Decision Tree Structure : \\n\")\n",
+    "print_tree(node,0)\n",
+    "\n",
+    "print(\"\\nPredictions for test data\")\n",
+    "print_predictions(node, dTest, metadata)"
    ]
   },
   {
