cats vs Dog using nn & one hot encoding

--- a/mlHandsOn/CatsvsDog.ipynb
+++ b/mlHandsOn/CatsvsDog.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ef59ea43-0c96-495c-bd0d-03e086944fdc",
    "metadata": {
     "jupyter": {
@@ -22,12 +22,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-05-21 16:17:49.021977: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-05-21 16:17:49.022254: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-05-21 16:17:49.023961: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-05-21 16:17:49.048019: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-06-12 14:38:43.522565: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-06-12 14:38:43.522839: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-06-12 14:38:43.524777: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-06-12 14:38:43.565471: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-05-21 16:17:49.626740: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-06-12 14:38:44.093514: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "bcebac2a-bb5b-4393-a284-ec565f13052e",
    "metadata": {},
    "outputs": [
@@ -58,14 +58,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 23410 files belonging to 2 classes.\n",
-      "Using 18728 files for training.\n",
-      "Using 4682 files for validation.\n"
+      "Found 20 files belonging to 2 classes.\n",
+      "Using 16 files for training.\n",
+      "Using 4 files for validation.\n"
      ]
     }
    ],
    "source": [
-    "dPath = \"datasets/PetImages\"\n",
+    "dPath = \"../datasets/PetImages\"\n",
     "\n",
     "image_size = (180, 180)\n",
     "batch_size = 128\n",
@@ -74,7 +74,7 @@
     "    dPath,\n",
     "    validation_split=0.2,\n",
     "    subset=\"both\",\n",
-    "    seed=1337,\n",
+    "    seed=42,\n",
     "    image_size=image_size,\n",
     "    batch_size=batch_size,\n",
     ")"
