naive Bayesian Classifier added

--- a/mlLab/130624.ipynb
+++ b/mlLab/130624.ipynb
@@ -8,12 +8,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Importing dependencies :**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Synthesising data :**"
    ]
   },
   {
@@ -27,6 +41,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Normalising data :*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -34,6 +55,13 @@
    "source": [
     "X = X/np.amax(X,axis=0)\n",
     "y = y/100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Helper functions :**"
    ]
   },
   {
@@ -47,6 +75,13 @@
     "\n",
     "def dSig(x):\n",
     "    return x*(1-x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Parameter definition :**"
    ]
   },
   {
@@ -76,6 +111,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Training :**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -100,6 +142,13 @@
     "\n",
     "    wout += hlayer_act.T.dot(dOut)*lr\n",
     "    wh += X.T.dot(dHidden)*lr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Predicting :**"
    ]
   },
   {
