--- a/mlLab/130624_2.ipynb
+++ b/mlLab/130624_2.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -128,6 +128,8 @@
       "['rain' 'cool' 'normal' 'strong' 'no']\n",
       "['cloudy' 'cool' 'normal' 'strong' 'yes']\n",
       "['sunny' 'mild' 'high' 'weak' 'no']\n",
+      "\n",
+      "The testing data set are : \n",
       "['sunny' 'cool' 'normal' 'weak' 'yes']\n",
       "['rain' 'mild' 'normal' 'weak' 'yes']\n",
       "['sunny' 'mild' 'normal' 'strong' 'yes']\n",
@@ -162,7 +164,7 @@
     "print(\"\\nThe training data set are : \")\n",
     "for x in xTrain:\n",
     "    print(x)\n",
-    "\n",
+    "print(\"\\nThe testing data set are : \")\n",
     "xTest = np.array(xTest)\n",
     "for x in xTest:\n",
     "    print(x)\n",
